# kalshi-trading

./: .gitignore  LICENSE  Makefile  README.md
backend/: .env.example  Makefile  alembic.ini  pyproject.toml  start_server.py
backend/alembic/: env.py
backend/alembic/versions/: 6d734d412218_initial_schema.py  a1b2c3d4e5f6_add_autoresearch_tables.py
backend/app/: config.py  dependencies.py  main.py
backend/app/api/v1/: backtest.py  markets.py  orders.py  portfolio.py  positions.py  router.py  scanner.py  settings_router.py  strategies.py
backend/app/api/ws/: feed.py
backend/app/autoresearch/: __init__.py  __main__.py  cli.py  collector.py  config.py  evaluate.py  git_manager.py  loop.py  market_filter.py  models.py  prepare.py  program.md  sandbox.py  scoring.py  weather_client.py
backend/app/autoresearch/strategies/: seed_strategy.py
backend/app/broker/: __init__.py  base.py  kalshi_client.py  paper_broker.py  websocket_client.py
backend/app/core/math/: depo.py  hrp.py  kelly.py  metrics.py
backend/app/core/risk/: circuit_breakers.py
backend/app/core/signals/: edge_detector.py
backend/app/core/strategies/: __init__.py  base.py  (+5 more)
backend/app/models/: __init__.py  backtest_run.py  base.py  external_data.py  fill.py  market.py  order.py  portfolio_snapshot.py  position.py  strategy_config.py
backend/app/schemas/: __init__.py  backtest.py  market.py  order.py  portfolio.py  position.py  strategy.py
backend/app/services/: backtest_engine.py  portfolio_service.py  scanner_service.py  trading_engine.py
backend/app/workers/: market_poller.py
(+7 files in other folders)
