[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kalshi-trading-bot"
version = "0.1.0"
description = "World-class Kalshi prediction market trading bot"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "sqlalchemy[asyncio]>=2.0.30",
    "aiosqlite>=0.20.0",
    "alembic>=1.13.1",
    "apscheduler>=3.10.4",
    "httpx>=0.27.0",
    "websockets>=12.0",
    "scipy>=1.13.0",
    "numpy>=1.26.4",
    "pandas>=2.2.2",
    "scikit-learn>=1.5.0",
    "structlog>=24.2.0",
    "python-dotenv>=1.0.1",
    "asyncpg>=0.29.0",
    "aiohttp>=3.9.5",
    "anthropic>=0.39.0",
    "pyarrow>=16.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.7",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["app/tests"]
